--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  timeago: ^3.7.0
+  cached_network_image: ^3.3.1
+
 
 dev_dependencies:
   flutter_test:
