--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,18 @@ dependencies:
   timeago: ^3.7.0
   cached_network_image: ^3.3.1
   http: ^1.1.0
+  url_launcher: ^6.2.4
+  provider: ^6.1.2
+  shared_preferences: ^2.2.2
+  flutter_localizations:
+    sdk: flutter
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^2.3.1  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -57,10 +64,12 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
